--- a/app/src/main/res/layout/activity_home_fragment.xml
+++ b/app/src/main/res/layout/activity_home_fragment.xml
@@ -7,7 +7,9 @@
     android:orientation="vertical"
     tools:context=".HomeFragment">
 
-
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -55,5 +57,5 @@
 
     </RelativeLayout>
 
-
+</ScrollView>
 </FrameLayout>
